Changed dev URLs for production ready URLs.

--- a/views/index.html
+++ b/views/index.html
@@ -71,7 +71,7 @@
         </p>
         <pre><code>&lt;a href="https://atm.glitch.me" class="atm-btn" target="_blank"&gt;Add Task&lt;/a&gt;</code></pre>
         <p>
-          Try it <a href="https://atm.glitch.me" class="atm-btn" target="_blank">Add Task</a>
+          Try it <a href="https://atm.now.sh" class="atm-btn" target="_blank">Add Task</a>
         </p>
         <p>
           <strong>Add prefilled task button.</strong> It prefills the input above with your desired text, for example: "Added my first task with #AddToMakerlog".
@@ -80,9 +80,9 @@
           To prefill a task input just append <code>?task={edit-text}</code> at the end of the URL. <code>{edit-text}</code> must be encoded in the URL.
           <br>*Please note that users are free to modify the text using the input above.
         </p>
-        <pre><code>&lt;a href="https://atm.glitch.me/?task=Added%20my%20first%20task%20with%20%23AddToMakerlog" class="atm-btn" target="_blank"&gt;Add Task&lt;/a&gt;</code></pre>
+        <pre><code>&lt;a href="https://atm.now.sh/?task=Added%20my%20first%20task%20with%20%23AddToMakerlog" class="atm-btn" target="_blank"&gt;Add Task&lt;/a&gt;</code></pre>
         <p>
-          Try it <a href="https://atm.glitch.me/?task=Added%20my%20first%20task%20with%20%23AddToMakerlog" class="atm-btn" target="_blank">Add Task</a>
+          Try it <a href="https://atm.now.sh/?task=Added%20my%20first%20task%20with%20%23AddToMakerlog" class="atm-btn" target="_blank">Add Task</a>
         </p>
         <h4>
           No-code option
@@ -90,8 +90,8 @@
         <p>
           If you don't want to use anchors or any piece of code, just create a link to the following URLs.
         </p>
-        <pre><code>https://atm.glitch.me (empty task input).
-https://atm.glitch.me/?task=Desired text (prefilled task input).</code></pre>
+        <pre><code>https://atm.now.sh (empty task input).
+https://atm.now.sh/?task=Desired text (prefilled task input).</code></pre>
         <p>
           Psst! Here's a PNG button: (300x60pixels)
         </p>
