--- a/views/index.html
+++ b/views/index.html
@@ -69,7 +69,7 @@
           <strong>Add empty task button.</strong> It displays the input above to let the user type in any text he/she wants.
           <br>To do so simply create an anchor element in your website and point it to this page.
         </p>
-        <pre><code>&lt;a href="https://atm.glitch.me" class="atm-btn" target="_blank"&gt;Add Task&lt;/a&gt;</code></pre>
+        <pre><code>&lt;a href="https://atm.now.sh" class="atm-btn" target="_blank"&gt;Add Task&lt;/a&gt;</code></pre>
         <p>
           Try it <a href="https://atm.now.sh" class="atm-btn" target="_blank">Add Task</a>
         </p>
