--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="//cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
   <link rel="stylesheet" href="//cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
   <link rel="stylesheet" href="/index.css">
-  <script src="public/index.js"></script>
+  <script src="/index.js"></script>
 </head>
 <body>
   <div class="container">
